--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
     rel="stylesheet"
   />
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
+      rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
