--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
       rel="stylesheet">
 
-    <title>React App</title>
+    <title>NRB GLobal</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Community for Non Residential Bangladeshis</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
