top banner photo updated and modal photo updated for #58

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="NRB Global Non-resident Bangladeshi a completely different type of Global based organization formed by the Expatriate Bangladeshi Community Worldwide. This is the first worldwide 15 Million Bangladeshi people's platform, a non-profit and non-political organization for 15 Million Bangladeshi living in different countries in the world. We also roared our voice putting our shoulders to the shoulders of international human rights organizations. NRB Global has efficiently done the job of image-building of Bangladesh abroad maintaining a deep relationship with the icon(Bangladeshi Star) most designated officials of the administration of different countries. NRB Global is the bridge between Bangladesh and abroad."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
